src/main/java/com/example/fas/repositories/services/serviceImpl/exceptions/user/error/HadUserActiveException.java
package com.example.fas.repositories.services.serviceImpl.exceptions.user.error;

public class HadUserActiveException extends RuntimeException {
    public HadUserActiveException(String message) {
        super(message);
    }
    
}
